# PymoSAICS

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  USER_GUIDE.md  VALIDATION.md
docs/plans/: 2026-07-21-public-pymosaics-redesign.md
pymosaics/: __init__.py  gui.py  plugin.py
pymosaics/assets/: ASSET_NOTICE.md
pymosaics/assets/forcefields/ff14sb/: manifest.tsv  mosaics_openmm-ff14sb.bend  mosaics_openmm-ff14sb.bond  mosaics_openmm-ff14sb.onfo  mosaics_openmm-ff14sb.tors_and_impr  mosaics_openmm-ff14sb.vdw  top_openmm-ff14sb_protein.rtf
pymosaics/assets/forcefields/kb_3pt/: PROVENANCE.md  top_3pt_prot_na.rtf
pymosaics/assets/forcefields/panel/: FORCEFIELD_USAGE.md  PROVENANCE.md  README.md  RTF_SHA256SUMS  SOURCE_COMMIT  forcefield_panel.tsv  top_all99-bs0_prot_hybrid_chidef.rtf  top_all99-bsc1_prot_hybrid_chidef.rtf  top_amber-ol24_ol3_hybrid_chidef.rtf  top_amber-ol24_ol3_terminal_hybrid_chidef.rtf  top_openmm-ol15_ol3_hybrid_chidef.rtf  top_openmm-ol21_ol3_hybrid_chidef.rtf
pymosaics/assets/forcefields/panel/db_bs0/: mosaics_amber99-bs0.bend  mosaics_amber99-bs0.bond  mosaics_amber99-bs0.onfo  mosaics_amber99-bs0.tors_and_impr  mosaics_amber99-bs0.vdw
pymosaics/assets/forcefields/panel/db_bsc1/: mosaics_amber99-bsc1.bend  mosaics_amber99-bsc1.bond  mosaics_amber99-bsc1.onfo  mosaics_amber99-bsc1.tors_and_impr  mosaics_amber99-bsc1.vdw
pymosaics/assets/forcefields/panel/db_ff14sb/: manifest.tsv  mosaics_amber-ff14sb.bend  mosaics_amber-ff14sb.bond  mosaics_amber-ff14sb.onfo  mosaics_amber-ff14sb.tors_and_impr  mosaics_amber-ff14sb.vdw
pymosaics/assets/forcefields/panel/db_ol15_ol3/: manifest.tsv  mosaics_openmm-ol15_ol3.bend  mosaics_openmm-ol15_ol3.bond  mosaics_openmm-ol15_ol3.onfo  (+2 more)
pymosaics/assets/runtimes/darwin-arm64/: mosaics-3.9.1  mosaics-experimental-2026-07-21
pymosaics/core/: __init__.py  analysis.py  builder.py  catalog.py  coarse_grain.py  config.py  landscape.py  models.py  nucleic_builder.py  progress.py  project.py  protein_prep.py  regions.py  runtime.py  structures.py  topology.py  trajectory.py
scripts/: build_release.py  pymol_smoke_test.py
tests/: __init__.py  test_analysis.py  test_catalog_builder.py  test_config.py  test_landscape.py  test_nucleic_builder.py  test_nucleic_runtime.py  test_plugin.py  test_progress.py  test_project.py  test_protein_prep.py  test_release.py  test_runtime.py  test_structures_regions.py  test_topology.py
tests/fixtures/: README.md
(+24 files in other folders)
