[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pymosaics-plugin"
version = "0.1.1"
description = "Cross-platform PyMOL interface for an external MOSAICS runtime"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "PymoSAICS contributors"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/omagebright/PymoSAICS"
Repository = "https://github.com/omagebright/PymoSAICS"
Issues = "https://github.com/omagebright/PymoSAICS/issues"

[tool.setuptools.packages.find]
include = ["pymosaics*"]
