[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pymosaics-plugin"
version = "0.4.0"
description = "Transparent MOSAICS preparation, simulation, and analysis inside PyMOL"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Folorunsho Bright Omage"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/omagebright/PymoSAICS"
Repository = "https://github.com/omagebright/PymoSAICS"
Issues = "https://github.com/omagebright/PymoSAICS/issues"

[tool.setuptools.packages.find]
include = ["pymosaics*"]

[tool.setuptools.package-data]
pymosaics = ["assets/**/*"]
